<resources>
    <string name="app_name">BetreuerApp</string>

    <!-- Fachbereiche für Spinner -->
    <string-array name="expertise_areas">
        <item>Alle Bereiche</item>
        <item>Wirtschaftsinformatik</item>
        <item>Software Engineering</item>
        <item>Data Science</item>
        <item>Künstliche Intelligenz</item>
        <item>IT-Sicherheit</item>
        <item>Web Development</item>
        <item>Mobile Development</item>
        <item>Datenbanken</item>
        <item>Projektmanagement</item>
    </string-array>

    <!-- Status für Dashboard -->
    <string-array name="thesis_statuses">
        <item>Alle Status</item>
        <item>In Abstimmung</item>
        <item>Angemeldet</item>
        <item>Abgegeben</item>
        <item>Kolloquium gehalten</item>
    </string-array>

    <!-- Status-Übergänge -->
    <string-array name="status_transitions">
        <item>In Abstimmung</item>
        <item>Angemeldet</item>
        <item>Abgegeben</item>
        <item>Kolloquium gehalten</item>
    </string-array>

    <!-- Themen Status Filter -->
    <string-array name="topic_status_filter">
        <item>Alle Status</item>
        <item>Verfügbar</item>
        <item>Vergeben</item>
        <item>Abgeschlossen</item>
    </string-array>

    <!-- Themen Status Werte -->
    <string-array name="topic_status_values">
        <item>Verfügbar</item>
        <item>Vergeben</item>
        <item>Abgeschlossen</item>
    </string-array>

    <!-- Zweitgutachter Filter -->
    <string-array name="review_filter_options">
        <item>Alle anzeigen</item>
        <item>In Begutachtung</item>
        <item>Abgeschlossen</item>
        <item>Rechnungen gestellt</item>
        <item>Rechnungen bezahlt</item>
        <item>Ohne Rechnung</item>
    </string-array>

    <!-- Rechnungsstatus -->
    <string-array name="invoice_status_options">
        <item>Nicht gestellt</item>
        <item>Gestellt</item>
        <item>Bezahlt</item>
    </string-array>


    <!-- Tabs -->
    <string name="tab_login">Login</string>
    <string name="tab_register">Registrieren</string>

    <!-- Wait-Animation -->
    <string name="please_wait">Bitte warten…</string>

    <!-- DEV-Hinweis -->
    <string name="dev_mode_hint">DEV-MODUS: Rolle wählbar (nicht für Produktion)</string>

    <!-- Felder / Hints -->
    <string name="hint_first_name">Vorname</string>
    <string name="hint_last_name">Nachname</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_password_repeat">Passwort wiederholen</string>
    <string name="hint_password_min">Passwort (min. 6 Zeichen)</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrieren</string>

    <!-- Rollen -->
    <string-array name="roles_array">
        <item>student</item>
        <item>tutor</item>
    </string-array>

    <!-- Meldungen -->
    <string name="msg_enter_name">Vor- und Nachname eingeben</string>
    <string name="msg_enter_email_pw">E-Mail und Passwort eingeben</string>
    <string name="msg_email_pw_min">E-Mail und min. 6 Zeichen Passwort</string>
    <string name="msg_register_ok">Registriert als %1$s</string>
    <string name="msg_register_fail">Registrierung fehlgeschlagen: %1$s</string>
    <string name="msg_profile_fail">Profilfehler: %1$s</string>
    <string name="msg_login_ok">Login erfolgreich</string>
    <string name="msg_login_fail">Login fehlgeschlagen: %1$s</string>
    <string name="msg_no_user_after_register">Kein User nach Registrierung gefunden</string>

    <!-- Home Screens -->
    <string name="welcome_name">Willkommen, %1$s</string>
    <string name="btn_logout">Logout</string>

</resources>